# TIFR-Work

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  get_test_data.py  make_stress_data.py  pyproject.toml
AutoSIM-gitlab/util/: benchmark.sh  benchmark_suite.sh  cvcf_audit_engine.py  cvcf_master_telemetry.py  cvcf_stream.py  cvcf_stream_ultra.py  deep_audit_pipeline.sh  run_final_audit.sh
autosim_workspace/: README.md
autosim_workspace/data/: .gitkeep
autosim_workspace/umbrella_output/: .gitkeep
docs/: README.md
src/autosim_core/: HPC_ORCHESTRATOR.md  __init__.py  autosim_hpc_orchestrator.py  example_hpc_usage.py
src/gui_frontend/: __init__.py  main.py
src/vmd_plugins/: __init__.py  vihaan_rmsf_plugin.tcl  vmd_commander.py  vmd_server.tcl
tests/: __init__.py  test_autosim_core.py  test_gui_frontend.py  test_vmd_plugins.py
tests/autosim_core/: __init__.py  test_core.py
tests/gui_frontend/: __init__.py  test_gui.py
tests/vmd_plugins/: __init__.py  test_rmsf_plugin_presence.py  test_vmd.py
